--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-dom": "^17.0.2",
     "react-responsive": "^9.0.0-beta.6",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.3"
   },
