--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "framer-motion": "^6.2.3",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-encode": "^1.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
