--- a/package.json
+++ b/package.json
@@ -7,11 +7,18 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@zoomus/websdk": "^2.3.0",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
+    "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.0",
+    "crypto-global": "^1.0.5",
+    "crypto-js": "^4.1.1",
     "framer-motion": "^6.2.3",
+    "hash.js": "^1.1.7",
     "jsonwebtoken": "^8.5.1",
     "jwt-encode": "^1.0.1",
+    "node-polyfill-webpack-plugin": "^1.1.4",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
@@ -19,8 +26,10 @@
     "react-router-dom": "^5.3.0",
     "react-schedule-selector": "^3.0.0",
     "react-scripts": "^5.0.0",
+    "stream-browserify": "^3.0.0",
     "styled-components": "^5.3.3",
-    "web-vitals": "^2.1.3"
+    "web-vitals": "^2.1.3",
+    "zoomus": "^0.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -45,5 +54,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "buffer": "^6.0.3",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2"
   }
 }
