--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react-router-dom": "^5.3.0",
     "react-schedule-selector": "^3.0.0",
     "react-scripts": "^5.0.0",
+    "react-scrollable-feed": "^1.3.1",
+    "socket.io-client": "^4.4.1",
     "stream-browserify": "^3.0.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.3",
