--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
+    "react-grid": "^4.0.4",
     "react-responsive": "^9.0.0-beta.6",
     "react-router-dom": "^5.3.0",
     "react-schedule-selector": "^3.0.0",
