--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "crypto-browserify": "^3.12.0",
     "crypto-global": "^1.0.5",
     "crypto-js": "^4.1.1",
+    "filestack-react": "^4.0.1",
     "framer-motion": "^6.2.3",
     "hash.js": "^1.1.7",
     "jsonwebtoken": "^8.5.1",
