--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@progress/kendo-react-labels": "^5.2.0",
+    "@progress/kendo-react-scheduler": "^5.2.0",
+    "@progress/kendo-theme-classic": "^5.3.1",
     "@syncfusion/ej2-react-calendars": "^19.4.48",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -17,6 +20,7 @@
     "filestack-react": "^4.0.1",
     "framer-motion": "^6.2.3",
     "hash.js": "^1.1.7",
+    "html-react-parser": "^1.4.11",
     "jsonwebtoken": "^8.5.1",
     "jwt-encode": "^1.0.1",
     "node-polyfill-webpack-plugin": "^1.1.4",
