--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@progress/kendo-licensing": "^1.2.2",
     "@progress/kendo-react-labels": "^5.2.0",
     "@progress/kendo-react-scheduler": "^5.2.0",
     "@progress/kendo-theme-classic": "^5.3.1",
